fix: reformat code

--- a/site/view/Component/style/component.scss
+++ b/site/view/Component/style/component.scss
@@ -1,16 +1,21 @@
-.component{
+@import '@hi-ui/core-css/index.scss';
+
+.component {
   .home-container {
     padding-right: 120px;
   }
-  .navigation{
+
+  .navigation {
     padding-left: 24px;
     line-height: 44px;
     font-size: 12px;
     color: #999;
   }
-  .markdown-content{
+
+  .markdown-content {
     padding: 24px;
   }
+
   .markdown-body {
     line-height: 1.5;
     //h2 {
@@ -34,13 +39,15 @@
     //  color: #666;
     //}
 
-    pre[class*="language-"] {
-      border: 1px solid #E6E7E8;
+    pre[class*='language-'] {
+      border: 1px solid #e6e7e8;
       background-color: #fff;
       font-size: 12px;
     }
 
     .demo-box {
+      @include component-reset();
+
       .run-demo {
         padding: 24px 27px;
         border: 1px solid #e6e7e8;
@@ -52,6 +59,7 @@
           border: none;
         }
       }
+
       .code-demo {
         border: 1px solid #e6e7e8;
         border-top: none;
@@ -59,15 +67,15 @@
 
         .code {
           height: 0;
-          background-color: rgba(242, 242, 242, .2);
-          transition: height .5s;
+          background-color: rgba(242, 242, 242, 0.2);
+          transition: height 0.5s;
           overflow: hidden;
 
           .description-box {
             display: flex;
             margin: 26px 24px;
             padding: 16px 20px;
-            border: 1px solid #E6E7E8;
+            border: 1px solid #e6e7e8;
             border-radius: 2px;
             font-size: 12px;
             color: #333;
@@ -89,16 +97,18 @@
               flex-direction: column;
               justify-content: space-around;
               padding-left: 20px;
-              color: #4284F5;
+              color: #4284f5;
               text-align: right;
               cursor: pointer;
             }
           }
+
           .language-js {
             margin: 0;
             border: none;
           }
         }
+
         // &.plain {
         //   border-top: 1px solid #e6e7e8;
         //   .code {
@@ -111,10 +121,10 @@
           height: 46px;
           line-height: 46px;
           text-align: center;
-          border-top: 1px solid #E6E7E8;
+          border-top: 1px solid #e6e7e8;
           background-color: #fff;
           font-size: 12px;
-          color: #999999;
+          color: #999;
           cursor: pointer;
 
           .code-ctrl-text {
@@ -128,7 +138,7 @@
               position: absolute;
               left: 0;
               top: 50%;
-              border-bottom: 4px solid #BFC1C3;
+              border-bottom: 4px solid #bfc1c3;
               border-left: 4px solid transparent;
               border-right: 4px solid transparent;
               transform: translateY(-50%);
@@ -136,11 +146,11 @@
           }
 
           &:hover {
-            color: #4284F5;
+            color: #4284f5;
 
             .code-ctrl-text {
               &::after {
-                border-bottom-color: #4284F5;
+                border-bottom-color: #4284f5;
               }
             }
           }
@@ -155,18 +165,18 @@
           .code-ctrl-text {
             &::after {
               content: '';
-              border-top: 4px solid #BFC1C3;
+              border-top: 4px solid #bfc1c3;
               border-bottom: 4px solid transparent;
               transform: translateY(-25%);
             }
           }
 
           &:hover {
-            color: #4284F5;
+            color: #4284f5;
 
             .code-ctrl-text {
               &::after {
-                border-top-color: #4284F5;
+                border-top-color: #4284f5;
               }
             }
           }
@@ -177,4 +187,3 @@
     }
   }
 }
-
